syntax = "proto3";
package saonetwork.sao.sao;

import "gogoproto/gogo.proto";
option go_package = "github.com/SaoNetwork/sao/x/sao/types";

message Proposal {
  string owner = 1;
  string provider = 2;
  string groupId = 3;
  uint64 duration = 4;
  int32 replica = 5;
  int32 timeout = 6;
  string alias = 7;
  string dataId = 8;
  string commitId = 9;
  repeated string tags = 10; 
  string cid = 11;
  string rule = 12;
  string extendInfo = 13; 
  uint64 size = 14;
  uint32 operation = 15; // 0: new|update, 1:force-push
  repeated string readonlyDids = 16;
  repeated string readwriteDids = 17;
  string paymentDid = 18;
}
